add some resoures and design login screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Taxify</string>
     <string name="string_continue">Continue</string>
     <string name="mobile_number">Mobile Number</string>
-    <string name="unter">Unter</string>
+    <string name="taxify">Taxify</string>
     <string name="need_a_ride">Need a ride?</string>
     <string name="no_account">No account?</string>
     <string name="sign_up">Sign up</string>
